fix(mat-error): on small screen size, 2 line of error message had too small space
the message flowed under the submit button

--- a/src/app/components/product-list/product-item/product-item.component.scss
+++ b/src/app/components/product-list/product-item/product-item.component.scss
@@ -22,4 +22,8 @@ $product-gap: 16px;
   .product-content {
     padding: 8px 0;
   }
+
+  .margin-bottom {
+    margin-bottom: 12px;
+  }
 }
